--- a/admin.html
+++ b/admin.html
@@ -73,7 +73,6 @@
         let map;
 
         const SUPABASE_URL = "https://poxxulxqzxwotequkwbw.supabase.co";
-        const SUPABASE_SERVICE_ROLE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBveHh1bHhxenh3b3RlcXVrd2J3Iiwicm9lZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc0MDI1NjM2NywiZXhwIjoyMDU1ODMyMzY3fQ.qCvdI1kkLn72ucM9aBuXttK-95vux-YRC_J2PUSI8WA"; 
         const STORAGE_BUCKET = "geojson-files";
         const FILE_NAME = "lots.geojson";
 
@@ -87,10 +86,6 @@
             };
             L.control.layers(baseLayers).addTo(map);
 
-            fetchGeoJSON();
-        }
-
-        function fetchGeoJSON() {
             fetch(`${SUPABASE_URL}/storage/v1/object/public/${STORAGE_BUCKET}/${FILE_NAME}`)
                 .then(response => response.json())
                 .then(data => {
@@ -114,14 +109,12 @@
                     return { color: getLotColor(feature.properties.status), weight: 2 };
                 },
                 onEachFeature: function (feature, layer) {
+                    let labelColor = (feature.properties.status === "For Sale" && (!feature.properties.buy_link || feature.properties.buy_link.trim() === "")) ? "red" : "black";
                     let label = L.divIcon({
                         className: 'lot-label',
-                        html: feature.properties.plot_id,
+                        html: `<span style="color: ${labelColor};">${feature.properties.plot_id}</span>`,
                         iconSize: [1, 1]
                     });
-                    let labelColor = (feature.properties.status === "For Sale" && (!feature.properties.buy_link || feature.properties.buy_link.trim() === "")) ? "red" : "black";
-                    label.options.className = 'lot-label';
-                    label.options.html = `<span style="color: ${labelColor};">${feature.properties.plot_id}</span>`;
                     L.marker(layer.getBounds().getCenter(), { icon: label }).addTo(map);
 
                     layer.on('click', function () {
@@ -156,11 +149,24 @@
         }
 
         function fixLink(link) {
-            // This function ensures the link has the correct protocol
-            if (link && !link.startsWith('http://') and !link.startsWith('https://')) {
-                return 'https://' + link;
-            }
-            return link;
+            return link && !link.startsWith('http://') && !link.startsWith('https://') ? 'https://' + link : link;
+        }
+
+        function downloadGeoJSON() {
+            const fileUrl = `${SUPABASE_URL}/storage/v1/object/public/${STORAGE_BUCKET}/${FILE_NAME}`;
+            fetch(fileUrl)
+                .then(response => response.blob())
+                .then(blob => {
+                    const url = window.URL.createObjectURL(blob);
+                    const a = document.createElement("a");
+                    a.style.display = "none";
+                    a.href = url;
+                    a.download = "lots.geojson";
+                    document.body.appendChild(a);
+                    a.click();
+                    window.URL.revokeObjectURL(url);
+                })
+                .catch(error => console.error("❌ Error downloading GeoJSON:", error));
         }
 
         function autoSaveAndUpload() {
@@ -173,52 +179,6 @@
             selectedFeature.properties.buy_link = fixLink(document.getElementById('lot-link').value);
 
             saveGeoJSONToSupabase();
-        }
-
-        function downloadGeoJSON() {
-            fetch(`${SUPABASE_URL}/storage/v1/object/public/${STORAGE_BUCKET}/${FILE_NAME}`)
-            .then(response => response.blob())
-            .then(blob => {
-                const url = window.URL.createObjectURL(blob);
-                const a = document.createElement('a');
-                a.style.display = 'none';
-                a.href = url;
-                a.download = FILE_NAME;
-                document.body.appendChild(a);
-                a.click();
-                window.URL.revokeObjectURL(url);
-            })
-            .catch(e => alert('Error downloading the file: ' + e));
-        }
-
-        async function saveGeoJSONToSupabase() {
-            const statusIndicator = document.getElementById("statusIndicator");
-            statusIndicator.textContent = "Uploading...";
-            statusIndicator.className = "status-indicator";
-
-            const fileContent = new Blob([JSON.stringify(geojsonData, null, 4)], { type: "application/json" });
-
-            try {
-                const response = await fetch(`${SUPABASE_URL}/storage/v1/object/${STORAGE_BUCKET}/${FILE_NAME}`, {
-                    method: "PUT",
-                    headers: {
-                        "Authorization": `Bearer ${SUPABASE_SERVICE_ROLE_KEY}`,
-                        "Content-Type": "application/json"
-                    },
-                    body: fileContent
-                });
-
-                if (response.ok) {
-                    statusIndicator.textContent = "✅ Upload Success";
-                    statusIndicator.className = "status-indicator success";
-                    setTimeout(() => statusIndicator.textContent = "", 3000); // Disappears after 3 seconds
-                } else {
-                    throw new Error('Failed to upload');
-                }
-            } catch (error) {
-                statusIndicator.textContent = "❌ Error uploading.";
-                statusIndicator.className = "status-indicator error";
-            }
         }
     </script>
 </body>
